<resources>
    <string name="app_name">Class25B-AS-HW1</string>
    <string name="biometric">Biometric</string>
    <string name="auth">Auth</string>
    <string name="flashlight">Flashlight</string>
    <string name="step_count">Step Count</string>
    <string name="rotation_lock">Rotation Lock</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="pip_control_permission_description">Allows an application to control Picture-in-Picture mode.</string>
    <string name="pip_turn_on">turn on</string>
    <string name="pip_otp">Pip OTP</string>
    <string name="auth_complete">Auth complete now login!</string>
</resources>