<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        android:id="@+id/lbl_title"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="40dp"
        android:textSize="22sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llc_switches"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bio_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biometric"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/flashlight_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashlight"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/steps_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_count"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/rotation_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotation_lock"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/has_app_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp"
            android:textSize="15sp"
            android:textStyle="bold"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>